--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,11 @@
   z-index: 2;
 }
 
+.logo_place_footer {
+  width: 183px;
+  height: 135px;
+}
+
 .description {
   padding: 100px 0;
   display: flex;
@@ -261,4 +266,63 @@
   right: -210px;
   width: 877px;
   height: 877px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  min-height: 350px;
+  background-color: #1f1f1f;
+  padding: 60px 0 40px;
+}
+
+.footer__columns {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer__author {
+  color: #fff;
+  margin: 18px 0;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 400;
+}
+
+.footer__column-heading {
+  margin: 0 0 20px 0;
+  color: #fff;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 700;
+}
+
+.footer__column-links {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 16px;
+}
+
+.footer__column-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 400;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
