--- a/styles/style.css
+++ b/styles/style.css
@@ -14,10 +14,10 @@
   max-height: 756px;
   height: 100vh;
   background-color: #f2f2f2;
+  z-index: 1;
 }
 
 .header__title {
-  z-index: 2;
   margin: 0 0 0 64px;
   width: 730px;
   font-size: 102px;
@@ -29,7 +29,6 @@
   position: absolute;
   bottom: 30px;
   left: 64px;
-  z-index: 2;
   margin: 0;
   width: 388px;
   font-size: 18px;
@@ -40,17 +39,22 @@
 .header__link {
   text-decoration: none;
   color: #2f80ed;
+  transition: all .4s;
 }
 
 .header__link::after {
   content: ' \2192';
 }
 
+.header__link:hover {
+  opacity: .6;
+}
+
 .header__main-illustration {
   position: absolute;
   right: 0;
   bottom: 0;
-  z-index: 1;
+  z-index: -1;
   width: 756px;
   height: 608px;
 }
@@ -62,13 +66,13 @@
   width: 568px;
   height: 568px;
   background-color: #2f80ed;
+  z-index: -2;
 }
 
 .logo_place_header {
   position: absolute;
   top: 30px;
   left: 64px;
-  z-index: 2;
 }
 
 .logo_place_footer {
@@ -136,7 +140,7 @@
 
 .section-title_theme_dark {
   color: #fff;
-  z-index: 1;
+  /*z-index: 1;*/
 }
 
 .section-subtitle {
@@ -150,7 +154,6 @@
 
 .section-subtitle_theme_dark {
   color: #fff;
-  z-index: 1;
 }
 
 .table {
@@ -240,10 +243,15 @@
   font-weight: 400;
   text-decoration: none;
   color: #2f80ed;
+  transition: all .4s;
 }
 
 .feynman__link::after {
   content: ' \2192';
+}
+
+.feynman__link:hover {
+  opacity: .6;
 }
 
 .kaufman {
@@ -255,6 +263,7 @@
   padding: 90px 0;
   background-color: #1f1f1f;
   overflow: hidden;
+  z-index: 1;
 }
 
 .kaufman__triangle {
@@ -263,6 +272,7 @@
   right: -210px;
   width: 877px;
   height: 877px;
+  z-index: -1;
 }
 
 .footer {
@@ -316,6 +326,11 @@
   font-weight: 400;
   text-decoration: none;
   color: #fff;
+  transition: all .4s;
+}
+
+.footer__column-link:hover {
+  opacity: .6;
 }
 
 .footer__social-icon {
