--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,17 @@
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rotation {
+  animation: rotation linear 20s infinite;
+}
+
 .page {
   margin: 0 auto;
   min-width: 1100px;
@@ -16,6 +30,7 @@
   max-height: 756px;
   height: 100vh;
   background-color: #f2f2f2;
+  overflow: hidden;
 }
 
 .header__title {
