--- a/styles/style.css
+++ b/styles/style.css
@@ -137,6 +137,54 @@
   font-weight: 700;
 }
 
+.techniques {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.cards {
+  width: 920px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+.cards__item {
+  width: 240px;
+  margin: 60px 100px 0 0;
+}
+
+.cards__item:nth-of-type(3n) {
+  margin-right: 0;
+}
+
+.cards__image {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  margin: 0 40px 43px;
+}
+
+.cards__title {
+  text-align: center;
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: 700;
+}
+
+.cards__description {
+  text-align: center;
+  font-size: 18px;
+  line-height: 23px;
+  font-weight: 400;
+}
+
 .digits {
   display: flex;
   flex-direction: column;
