--- a/styles/style.css
+++ b/styles/style.css
@@ -221,6 +221,7 @@
   justify-content: flex-start;
   align-items: center;
   margin-bottom: 100px;
+  padding-top: 100px;
 }
 
 .section-title {
@@ -343,6 +344,65 @@
   opacity: .6;
 }
 
+.khan {
+  padding-top: 105px;
+  background-color: #f2f2f2;
+}
+
+.khan__container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.khan__author {
+  margin: 0;
+  font-size: 30px;
+  line-height: 42px;
+  font-weight: 400;
+}
+
+.khan__title {
+  margin: 0 0 50px 0;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: 700;
+}
+
+.khan__quote {
+  width: 790px;
+  margin: 0 0 36px 0;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 400;
+}
+
+.khan__quote-author {
+  margin: 0 0 10px 0;
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: 700;
+}
+
+.khan__quote-author-subline {
+  margin: 0 0 68px 0;
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: 400;
+}
+
+.khan__book-container {
+  display: flex;
+  align-items: flex-start;
+}
+
+.khan__book-pic {
+  width: 620px;
+  height: 608px;
+  object-fit: cover;
+  object-position: top;
+  margin-right: 48px;
+}
+
 .kaufman {
   position: relative;
   z-index: 1;
@@ -353,6 +413,23 @@
   padding: 90px 0;
   background-color: #1f1f1f;
   overflow: hidden;
+}
+
+.khan__buy-link {
+  font-size: 30px;
+  line-height: 42px;
+  font-weight: 400;
+  text-decoration: none;
+  color: #2f80ed;
+  transition: all .4s;
+}
+
+.khan__buy-link::after {
+  content: ' \2192';
+}
+
+.khan__buy-link:hover {
+  opacity: .6;
 }
 
 .kaufman__triangle {
