add resources block

--- a/styles/style.css
+++ b/styles/style.css
@@ -444,6 +444,34 @@
 
 }
 
+.resources {
+  padding: 100px 0 217px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.resources__logo-zone {
+  margin: 80px 0 0 0;
+  padding: 0;
+  list-style: none;
+  width: 1100px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.resources__logo {
+  width: 270px;
+  height: 38px;
+  transition: all .4s;
+}
+
+.resources__logo:hover {
+  opacity: .6;
+}
+
 .footer {
   display: flex;
   justify-content: center;
