--- a/styles/style.css
+++ b/styles/style.css
@@ -466,6 +466,9 @@
   width: 270px;
   height: 38px;
   transition: all .4s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .resources__logo:hover {
