--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @keyframes rotation {
+
   from {
     transform: rotate(0deg);
   }
@@ -55,7 +56,7 @@
 .header__link {
   text-decoration: none;
   color: #2f80ed;
-  transition: all .4s;
+  transition: all 0.4s;
 }
 
 .header__link::after {
@@ -63,7 +64,7 @@
 }
 
 .header__link:hover {
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .header__main-illustration {
@@ -138,26 +139,26 @@
 }
 
 .techniques {
-  width: 80%;
-  margin: 0 auto;
-  padding-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  margin: 0 auto;
+  padding-top: 100px;
+  width: 80%;
 }
 
 .cards {
-  width: 920px;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: wrap;
+  width: 920px;
 }
 
 .cards__item {
-  width: 240px;
   margin: 60px 100px 0 0;
+  width: 240px;
 }
 
 .cards__item:nth-of-type(3n) {
@@ -165,10 +166,10 @@
 }
 
 .cards__image {
+  margin: 0 40px 43px;
   width: 160px;
   height: 160px;
   border-radius: 50%;
-  margin: 0 40px 43px;
 }
 
 .cards__title {
@@ -186,22 +187,22 @@
 }
 
 .video {
-  padding-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  padding-top: 100px;
 }
 
 .video__iframes {
-  display: flex;
   transform: translateY(50px);
+  display: flex;
 }
 
 .video__iframe {
-  border: 0;
   width: 515px;
   height: 316px;
+  border: 0;
 }
 
 .video__iframe:first-of-type {
@@ -209,9 +210,9 @@
 }
 
 .oakley {
-  padding-top: 160px;
   display: flex;
   justify-content: center;
+  padding-top: 160px;
   background-color: #f2f2f2;
 }
 
@@ -333,7 +334,7 @@
   font-weight: 400;
   text-decoration: none;
   color: #2f80ed;
-  transition: all .4s;
+  transition: all 0.4s;
 }
 
 .feynman__link::after {
@@ -341,7 +342,7 @@
 }
 
 .feynman__link:hover {
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .khan {
@@ -350,8 +351,8 @@
 }
 
 .khan__container {
-  width: 80%;
   margin: 0 auto;
+  width: 80%;
 }
 
 .khan__author {
@@ -369,8 +370,8 @@
 }
 
 .khan__quote {
-  width: 790px;
   margin: 0 0 36px 0;
+  width: 790px;
   font-size: 24px;
   line-height: 34px;
   font-weight: 400;
@@ -396,11 +397,11 @@
 }
 
 .khan__book-pic {
+  margin-right: 48px;
   width: 620px;
   height: 608px;
   object-fit: cover;
   object-position: top;
-  margin-right: 48px;
 }
 
 .kaufman {
@@ -421,7 +422,7 @@
   font-weight: 400;
   text-decoration: none;
   color: #2f80ed;
-  transition: all .4s;
+  transition: all 0.4s;
 }
 
 .khan__buy-link::after {
@@ -429,7 +430,7 @@
 }
 
 .khan__buy-link:hover {
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .kaufman__triangle {
@@ -441,38 +442,37 @@
   height: 877px;
   background: url(../images/kaufman-triangle.svg) no-repeat;
   background-size: cover;
-
 }
 
 .resources {
-  padding: 100px 0 217px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  padding: 100px 0 217px;
 }
 
 .resources__logo-zone {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
   margin: 80px 0 0 0;
   padding: 0;
-  list-style: none;
   width: 1100px;
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+  list-style: none;
 }
 
 .resources__logo {
-  width: 270px;
-  height: 38px;
-  transition: all .4s;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 270px;
+  height: 38px;
+  transition: all 0.4s;
 }
 
 .resources__logo:hover {
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .footer {
@@ -529,11 +529,11 @@
   font-weight: 400;
   text-decoration: none;
   color: #fff;
-  transition: all .4s;
+  transition: all 0.4s;
 }
 
 .footer__column-link:hover {
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .footer__social-icon {
