--- a/blocks/khan/__quote/khan__quote.css
+++ b/blocks/khan/__quote/khan__quote.css
@@ -1,6 +1,7 @@
 .khan__quote {
   margin: 0 0 36px 0;
-  width: 790px;
+  max-width: 790px;
+  width: 100%;
   font-size: 24px;
   line-height: 34px;
   font-weight: 400;
